# fizzbuzze.rs

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: fizzbuzzers.rs
src/: impls.rs  lib.rs  main.rs
src/impls/: improved_om.rs  improved_om_display.rs  improved_om_fast.rs  improved_om_smolstr.rs  origin_ocean_moist.rs  simple_for_loop.rs  simple_iterator.rs
