[package]
name = "fizzbuzzers"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "fizzbuzzers"
harness = false

[features]
default = ["indexmap"]
indexmap = ["dep:indexmap"]
ordered-hash-map = ["dep:ordered_hash_map"]

[dependencies]
indexmap = { version = "2.2.6", optional = true }
itoa = "1.0.11"
ordered_hash_map = {version = "0.4.0", optional = true }
smol_str = "0.2.2"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
divan = "0.1.14"
